--- a/views/GuestSurvey/index.ejs
+++ b/views/GuestSurvey/index.ejs
@@ -113,7 +113,7 @@
           $("#down").toggleClass("newClass");
           $("#surveyvalue").toggleClass("newClass");
           $("#surveydesc").toggleClass("newClass");
-          q6 =  (q1*q2*q3*(Math.pow((1+(.01*q5)),q4)-1)/(.01*q5)).toFixed(2);;
+          q6 =  (Math.ceil(q1/2)*q2*q3*(Math.pow((1+(.01*q5)),q4)-1)/(.01*q5)).toFixed(2);
           document.getElementById('survey6').innerHTML= q6;
 
         }
