--- a/views/Planning/page2.ejs
+++ b/views/Planning/page2.ejs
@@ -4,25 +4,22 @@
     <form class="Questionnare">
       <table>
         <tr>
-          <td class="right-text">Would you like to upgrade to a 2-bed?</td>
+          <td class="right-text surveytext">Would you like to upgrade to a 2-bed?</td>
           <td><input type='checkbox' name="2bed"></td>
         </tr>
         <tr>
           <td id="survey1"></td>
         </tr>
         <tr>
-          <td class="right-text">3-bed?</td>
+          <td class="right-text surveytext">3-bed?</td>
           <td><input type="checkbox" name="3bed"></td>
         </tr>
         <tr>
-          <td class="right-text">Will you travel between March and August?</td>
+          <td class="right-text surveytext">Will you travel between March and August?</td>
           <td><input type="checkbox" name="peek"></td>
         </tr>
       </table>
     </form>
-    <a id="printbutton" href="http://www.printfriendly.com" style="color:#6D9F00;text-decoration:none;" class="printfriendly" onclick="window.print();return false;" title="Printer Friendly and PDF">
-      <img style="border:none;-webkit-box-shadow:none;box-shadow:none;" src="http://cdn.printfriendly.com/pf-button-big.gif" alt="Print Friendly and PDF"/>
-    </a>
 
     <div id="rotating-item-wrapper" class="Q-img">
      <img id="planpic1" class="rotating-item shadow Q-img" src="images/ireland/p1.jpg"/>
