--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -38,7 +38,6 @@
     <script src="/js/splitparams.js"></script>
     <!--SCRIPTS END-->
     <!--STYLES-->
-    <link rel="stylesheet" href="/styles/app.css">
     <link rel="stylesheet" href="/styles/css/dataTables.bootstrap.css">
     <link rel="stylesheet" href="/styles/importer.css">
     <link rel="stylesheet" href="/styles/infinite-rotator.css">
@@ -48,15 +47,17 @@
   </head>
 
   <body>
-    <a href="/"><img class="darken shadow homeicon" src="/images/home.jpg"></a>
-    <%- body %>
-    <div class="pic-wrapper" style="z-index:-1;">
-		  <figure class="pic-1"></figure>
-		  <figure class="pic-2"></figure>
-		  <figure class="pic-3"></figure>
-		  <figure class="pic-4"></figure>
-      <figure class="pic-5"></figure>
-		</div>
+    <div id="divSurveyScreen">
+      <a href="/SurveyHome"><img class="darken shadow homeicon" src="/images/home.jpg" id="homeIcon"></a>
+      <%- body %>
+      <div class="pic-wrapper" style="z-index:-1;">
+  		  <figure class="pic-1"></figure>
+  		  <figure class="pic-2"></figure>
+  		  <figure class="pic-3"></figure>
+  		  <figure class="pic-4"></figure>
+        <figure class="pic-5"></figure>
+  		</div>
+    </div>
 
 
 
