Fixes some images

--- a/assets/styles/survey.css.less
+++ b/assets/styles/survey.css.less
@@ -30,11 +30,13 @@
     height: 100%;
     z-index: 0;
   }
+
   .homeicon {
-    width: 100px;
-    height: 100px;
+    margin-left: 10px;
+    margin-top: 10px;
     border-radius: 50px;
   }
+
   .planlink {
     margin: 0px 35px 25px 25px;
     float:left;
@@ -44,6 +46,7 @@
     width: 300px;
     font-style: : cursive cursive ariel;
   }
+
   .planpic {
     float: bottom;
     height: 275px;
@@ -52,6 +55,7 @@
     margin-left: -332px;
     margin-top: 15px;
   }
+
   img.subpic {
     float: bottom;
     height: 250px;
@@ -66,6 +70,7 @@
     -webkit-box-shadow: 0 0 15px rgba(0, 0, 0, 3);
     -moz-box-shadow: 0 0 15px rgba(0, 0, 0, 3);
   }
+
   img.darken:hover {
     -webkit-filter: brightness(30%);
     filter: brightness(30%);
@@ -75,14 +80,17 @@
     -ms-transition: all 1s ease;
     transition: all 1s ease;
   }
+
   img.back{
     z-index:-1;
   }
+
   #rotating-item-wrapper {
       position: relative;
       width: 980px;
       height: 347px;
   }
+
   .rotating-item {
       display: none;
       position: absolute;
@@ -91,33 +99,37 @@
   }
 
   .thumbpic {
-    height: 200px;
-    width: 200px;
     border-radius: 50%;
-    position: fixed;
-    top: 60%;
-    left: 70%;
+    position: absolute;
+    bottom: 70px;
+    right: 10px;
+    /*top: 60%;
+    left: 70%;*/
   }
+
   .surveykeys {
     height: 200px;
     width: 200px;
-    position: fixed;
-    top: 50%;
-    left: 60%;
+    position: absolute;
+    bottom: 0px;
+    right: 80px;
+    /*top: 50%;
+    left: 60%;*/
   }
+
   .newClass{visibility: hidden}
 
   .permhidden {visibility: hidden}
 
   .arrow {
-    height:150px;
-    width: 150px;
     border-radius: 50%;
   }
+
   .arrow:hover {
     -webkit-filter: brightness(50%);
     filter: brightness(50%);
   }
+
   #surveyvalue {
     font-size: 30px;
     width: 150px;
@@ -125,6 +137,7 @@
     text-align: center;
     font-family: impact, Geneva, serif;
   }
+
   .hiddentext{
     font-size: 35px;
     color: #007700;
@@ -133,6 +146,7 @@
     font-style: italic;
     text-shadow: 2px 2px #000000;
   }
+
   .surveytext{
     font-size: 35px;
     color: #ffffff;
@@ -141,6 +155,7 @@
     font-style: italic;
     text-shadow: 2px 2px #000000;
   }
+
   .plantext{
     font-size: 25px;
     color: #000000;
@@ -166,6 +181,7 @@
     margin-top: 10px;
     margin-left: 10px;
   }
+
   .Q-img {
     width: 850px;
     height: 490px;
@@ -173,11 +189,12 @@
     bottom: 0;
     margin-top: -15px;
     border-radius: 10px;
-
   }
+
   .right-text {
     text-align: right;
   }
+
   form {
     margin-left: auto;
     margin-right:auto;
@@ -188,16 +205,20 @@
     -ms-transition: all 1s ease;
     transition: all 1s ease;
   }
+
   input {
     border: none;
   }
+
   input:focus {
     border: none;
   }
+
   .setwidth {
     margin-left: 30px;
     text-align: center;
   }
+
   .center-frame {
     display: block;
     z-index: 200 !important;
@@ -212,8 +233,9 @@
     background-color: #000000;
     z-index: -1 !important;
     border-radius: 1em;
-    opacity: .5;
+    opacity: 0.6;
   }
+
   .shadowrotate:hover {
     box-shadow: 0 0 45px rgba(0, 0, 0, 3);
     -webkit-box-shadow: 0 0 45px rgba(0, 0, 0, 3);
@@ -228,6 +250,7 @@
         -ms-transition: all 0.5s ease;
             transition: all 0.5s ease;
   }
+
   .tilt {
     -webkit-transition: all 0.5s ease;
        -moz-transition: all 0.5s ease;
@@ -235,6 +258,7 @@
         -ms-transition: all 0.5s ease;
             transition: all 0.5s ease;
   }
+
   .tilt:hover {
     -webkit-transform: rotate(10deg);
        -moz-transform: rotate(10deg);
@@ -242,6 +266,7 @@
         -ms-transform: rotate(10deg);
             transform: rotate(10deg);
   }
+  
   .spin:hover {
     radius-border: 25%;
     -webkit-transform: rotate(360deg);
