--- a/assets/styles/importer.less
+++ b/assets/styles/importer.less
@@ -28,3 +28,6 @@
 // etc.
 
 @import 'survey.css.less';
+@import 'infinite-rotator.css.less';
+@import 'ken-burns-effect.css.less';
+@import 'odometer.css.less';
