--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -36,6 +36,7 @@
     <script src="/js/js/jquery.dataTables.js"></script>
     <script src="/js/odometer.js"></script>
     <script src="/js/splitparams.js"></script>
+    <script src="/js/star-explosion.js"></script>
     <!--SCRIPTS END-->
     <!--STYLES-->
     <link rel="stylesheet" href="/styles/css/dataTables.bootstrap.css">
