Star explosion is not universal

--- a/views/GuestSurvey/index.ejs
+++ b/views/GuestSurvey/index.ejs
@@ -62,4 +62,5 @@
   </div>
 </div>
 
+<% block('localScripts', '<script src="/page_js/star-explosion.js"></script>') %>
 <% block('localScripts', '<script src="/page_js/survey.js"></script>') %>
