--- a/views/GuestSurvey/index.ejs
+++ b/views/GuestSurvey/index.ejs
@@ -63,4 +63,5 @@
 </div>
 
 <% block('localScripts', '<script src="/page_js/star-explosion.js"></script>') %>
+<% block('localScripts', '<script src="/page_js/fireworks.js"></script>') %>
 <% block('localScripts', '<script src="/page_js/survey.js"></script>') %>
