added ownership page

--- a/views/Home/index.ejs
+++ b/views/Home/index.ejs
@@ -3,22 +3,22 @@
     <div class="semi-transparent-background"></div>
     <div class="homelink">
       <a href="/Survey"><img class="subpic darken shadow spin" src="/images/skilodge.jpg"></a>
-      <div class="hiddentext">Guest Survey</div>
+      <div class="hiddentext">Vacation Calculator</div>
     </div>
 
     <div class="homelink">
       <a href="/Planning"><img class="subpic darken shadow spin" src="/images/luau.jpg"></a>
-      <div class="hiddentext">Vacation Planning</div>
+      <div class="hiddentext">Star Credits</div>
     </div>
 
     <div class="homelink">
-      <a href="/Survey"><img class="subpic darken shadow spin" src="/images/yurts.jpg"></a>
-      <div class="hiddentext">Accommodations</div>
+      <a href="/Owner"><img class="subpic darken shadow spin" src="/images/yurts.jpg"></a>
+      <div class="hiddentext">Owner Calculator</div>
     </div>
 
     <div class="homelink">
       <a href="/About"><img class="subpic darken shadow spin" src="/images/london.jpg"></a>
-      <div class="hiddentext">HelpLine</div>
+      <div class="hiddentext">Expressway Weeks</div>
     </div>
   </div>
 </div>
