--- a/views/Home/SurveyHome.ejs
+++ b/views/Home/SurveyHome.ejs
@@ -3,7 +3,7 @@
     <div class="semi-transparent-background"></div>
 
     <div class="surveytext ceneter-text" id="divWelcomeText">
-      <div class="center-text-vertically">Global Discovery Vacations<br />
+      <div class="center-vertically">Global Discovery Vacations<br />
       - Click anywhere to begin -</div>
     </div>
   </div>
