--- a/assets/styles/survey.css.less
+++ b/assets/styles/survey.css.less
@@ -47,6 +47,15 @@
     font-style: : cursive cursive ariel;
   }
 
+  .remixer {
+    font-size: 15px;
+    color: #ffffff;
+    font-weight: bold;
+    font-family: Verdana, Geneva, serif;
+    font-style: italic;
+    text-shadow: 2px 2px #000000;
+  }
+
   .planpic {
     float: bottom;
     height: 275px;
