--- a/views/GuestSurvey/index.ejs
+++ b/views/GuestSurvey/index.ejs
@@ -2,6 +2,7 @@
   <div class="center-frame">
     <div class="semi-transparent-background"></div>
       <form action="/Survey2" name="survey">
+        <div id="resizer">
         <table>
           <thead></thead>
           <tbody>
@@ -42,6 +43,7 @@
             <input class="permhidden" type="submit">
           </tbody>
       </table>
+    </div>
     </form>
     <a id="trigger" href="#"><img class="thumbpic darken" src="/images/ThumbsUp.jpg"></a>
     <table class="surveykeys">
