working review page

--- a/assets/styles/survey.css.less
+++ b/assets/styles/survey.css.less
@@ -48,6 +48,67 @@
     font-style: : cursive cursive ariel;
   }
 
+  #reviewpanel {
+    background-color: #0F315D;
+    border: 2px #0F315D solid;
+    border-radius: 10px;
+    float: left;
+    margin: 20px;
+    width: 40%;
+  }
+
+  #reviewfinal {
+    background-color: #00bbee;
+    border: 2px #00bbee solid;
+    font-color: #ffffff;
+    border-radius: 10px;
+    margin: 20px;
+    margin-left: 45%;
+    width: 50%;
+  }
+
+  .ownermoney {
+    color: yellow;
+    text-shadow: 2px 2px #000000;
+  }
+
+  .basictext {
+    color: white;
+    text-shadow: 2px 2px #000000;
+  }
+
+  .largetext {
+    font-size: 25px;
+    font-weight: bold;
+  }
+
+  .supertext {
+    font-size: 35px;
+    font-weight: bold;
+  }
+
+  .smalltext {
+    font-size: 20px;
+  }
+
+  #reviewowner {
+    background-color: #000050;
+    border: 2px #000050 solid;
+    font-color: #ffffff;
+    border-radius: 10px;
+    margin: 20px;
+    margin-left: 45%;
+    width: 50%;
+  }
+
+  .largedown {
+    padding-top:30px;
+  }
+
+  .smalldown {
+    padding-top:25px;
+  }
+
   .remixer {
     font-size: 15px;
     color: #ffffff;
