--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -30,8 +30,10 @@
     <!--SCRIPTS-->
     <script src="/js/dependencies/sails.io.js"></script>
     <script src="/js/dist/jquery.js"></script>
+    <script src="/js/dist/js/bootstrap.js"></script>
     <script src="/js/home.js"></script>
     <script src="/js/infinite-rotator.js"></script>
+    <script src="/js/jquery.fireworks.js"></script>
     <script src="/js/js/dataTables.bootstrap.js"></script>
     <script src="/js/js/jquery.dataTables.js"></script>
     <script src="/js/odometer.js"></script>
@@ -45,7 +47,7 @@
 
   <body>
     <div id="divSurveyScreen">
-      <a href="/SurveyHome"><img class="darken shadow homeicon" src="/images/home.jpg" id="homeIcon"></a>
+      <a href="/SurveyHome" id="lnkHomeIcon"><img class="darken shadow homeicon" src="/images/home.jpg" id="homeIcon"></a>
       <%- body %>
       <div class="pic-wrapper" style="z-index:-1;">
   		  <figure class="pic-1"></figure>
