--- a/views/Home/index.ejs
+++ b/views/Home/index.ejs
@@ -1,24 +1,27 @@
 <div class="homepage">
   <div class="center-frame">
     <div class="semi-transparent-background"></div>
-    <div class="homelink">
-      <a href="/Survey"><img class="subpic darken shadow spin" src="/images/skilodge.jpg"></a>
-      <div class="hiddentext">Vacation Calculator</div>
-    </div>
 
-    <div class="homelink">
-      <a href="/Planning"><img class="subpic darken shadow spin" src="/images/luau.jpg"></a>
-      <div class="hiddentext">Star Credits</div>
-    </div>
+    <div id="divHomeLinks">
+      <div class="homelink">
+        <a href="/Survey"><img class="subpic darken shadow spin" src="/images/skilodge-small.jpg"></a>
+        <div class="hiddentext">Vacation Calculator</div>
+      </div>
 
-    <div class="homelink">
-      <a href="/Owner"><img class="subpic darken shadow spin" src="/images/yurts.jpg"></a>
-      <div class="hiddentext">Owner Calculator</div>
-    </div>
+      <div class="homelink">
+        <a href="/Planning"><img class="subpic darken shadow spin" src="/images/luau-small.jpg"></a>
+        <div class="hiddentext">Star Credits</div>
+      </div>
 
-    <div class="homelink">
-      <a href="/About"><img class="subpic darken shadow spin" src="/images/london.jpg"></a>
-      <div class="hiddentext">Expressway Weeks</div>
+      <div class="homelink">
+        <a href="/Owner"><img class="subpic darken shadow spin" src="/images/yurts-small.jpg"></a>
+        <div class="hiddentext">Owner Calculator</div>
+      </div>
+
+      <div class="homelink">
+        <a href="/About"><img class="subpic darken shadow spin" src="/images/london-small.jpg"></a>
+        <div class="hiddentext">Expressway Weeks</div>
+      </div>
     </div>
   </div>
 </div>
