--- a/assets/styles/survey.css.less
+++ b/assets/styles/survey.css.less
@@ -24,12 +24,38 @@
     -webkit-transform: translateY(-50%) translateX(-50%);
   }
 
+  h1 {
+    text-align: right;
+    font-size: 72px;
+    background: -webkit-linear-gradient(#eee, #333);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    width: 100%;
+  }
+
+  h2 {
+    font-size: 40px;
+    border: 2px #00bfff solid;
+    background-color: #00bfff;
+    font-weight: bold;
+    border-radius: 5px;
+    font-color: #ffffff;
+  }
+
   body {
     margin: auto;
     position: absolute;
     width: 100%;
     height: 100%;
     z-index: 0;
+    font-family: Verdana, Geneva, serif;
+    text-shadow: 2px 2px #000000;
+  }
+
+  .numberno {
+    float: left;
+    height: 100%;
+    margin: 5px;
   }
 
   .homeicon {
@@ -48,27 +74,64 @@
     font-style: : cursive cursive ariel;
   }
 
-  #reviewpanel {
+  #reviewleft {
+    opacity: 0.8;
     background-color: #0F315D;
     border: 2px #0F315D solid;
     border-radius: 10px;
     float: left;
-    margin: 20px;
+    padding: 10px;
+    margin: 20px 20px 20px 20px;
     width: 40%;
+    height: 70%;
+  }
+
+  #reviewright {
+    opacity: 0.8;
+    background-color: #000050;
+    border: 2px #000050 solid;
+    border-radius: 10px;
+    padding: 10px;
+    margin: 20px 20px 20px 45%;
+    width: 50%;
+    height: 70%;
+    font-color: #ffffff;
   }
 
   #reviewfinal {
     background-color: #00bbee;
     border: 2px #00bbee solid;
     font-color: #ffffff;
+    opacity: 0.8;
+    background-color: #000050;
+    border: 2px #000050 solid;
     border-radius: 10px;
-    margin: 20px;
-    margin-left: 45%;
+    padding: 10px;
+    margin: 20px 20px 20px 45%;
     width: 50%;
+    height: 70%;
+    font-color: #ffffff;
+  }
+
+  #reviewbox {
+    opacity: 0;
+    margin-top: 5%;
+    border: 1px #444444 dashed;
+    background-color: rgba(44, 44, 44, 0.4);
+    -webkit-transition: opacity 2s ease-in;
+       -moz-transition: opacity 2s ease-in;
+        -ms-transition: opacity 2s ease-in;
+         -o-transition: opacity 2s ease-in;
+            transition: opacity 2s ease-in
   }
 
   .ownermoney {
     color: yellow;
+    text-shadow: 2px 2px #000000;
+  }
+
+  .bluetext {
+    color: #1BB3F5;
     text-shadow: 2px 2px #000000;
   }
 
@@ -91,15 +154,7 @@
     font-size: 20px;
   }
 
-  #reviewowner {
-    background-color: #000050;
-    border: 2px #000050 solid;
-    font-color: #ffffff;
-    border-radius: 10px;
-    margin: 20px;
-    margin-left: 45%;
-    width: 50%;
-  }
+
 
   .largedown {
     padding-top:30px;
@@ -107,15 +162,6 @@
 
   .smalldown {
     padding-top:25px;
-  }
-
-  .remixer {
-    font-size: 15px;
-    color: #ffffff;
-    font-weight: bold;
-    font-family: Verdana, Geneva, serif;
-    font-style: italic;
-    text-shadow: 2px 2px #000000;
   }
 
   .planpic {
@@ -174,8 +220,11 @@
     position: absolute;
     bottom: 70px;
     right: 10px;
-    /*top: 60%;
-    left: 70%;*/
+    -webkit-transition: all 1s ease;
+    -moz-transition: all 1s ease;
+    -o-transition: all 1s ease;
+    -ms-transition: all 1s ease;
+    transition: all 1s ease;
   }
 
   .surveykeys {
@@ -190,10 +239,17 @@
 
   .newClass{visibility: hidden}
 
+  .deadClass{display:none}
+
   .permhidden {visibility: hidden}
 
   .arrow {
     border-radius: 50%;
+    -webkit-transition: all 1s ease;
+    -moz-transition: all 1s ease;
+    -o-transition: all 1s ease;
+    -ms-transition: all 1s ease;
+    transition: all 1s ease;
   }
 
   .arrow:hover {
@@ -203,17 +259,20 @@
 
   #surveyvalue {
     font-size: 30px;
-    width: 150px;
+    width: 100px;
     float:center;
     text-align: center;
-    font-family: impact, Geneva, serif;
+    -webkit-transition: all 1s ease;
+    -moz-transition: all 1s ease;
+    -o-transition: all 1s ease;
+    -ms-transition: all 1s ease;
+    transition: all 1s ease;
   }
 
   .hiddentext{
     font-size: 35px;
     color: #007700;
     font-weight: bold;
-    font-family: Verdana, Geneva, serif;
     font-style: italic;
     text-shadow: 2px 2px #000000;
   }
@@ -221,17 +280,27 @@
   .surveytext{
     font-size: 32px;
     color: #ffffff;
-    font-weight: bold;
-    font-family: Verdana, Geneva, serif;
-    font-style: italic;
     text-shadow: 2px 2px #000000;
+    font-family: Verdana, Geneva, serif;
+    opacity: 0;
+    -webkit-transition: opacity 1s ease-in;
+       -moz-transition: opacity 1s ease-in;
+        -ms-transition: opacity 1s ease-in;
+         -o-transition: opacity 1s ease-in;
+            transition: opacity 1s ease-in
+  }
+
+  .remixer{
+    font-size: 15px;
+    color: #ffffff;
+    text-shadow: 2px 2px #000000;
+    font-family: Verdana, Geneva, serif;
   }
 
   .plantext{
     font-size: 25px;
     color: #000000;
     font-weight: bold;
-    font-family: cursive, Geneva, serif;
     font-style: italic;
     text-shadow: 2px 2px #000000;
     margin-top: -350px;
@@ -246,7 +315,6 @@
     font-size: 20px;
     color: #007700;
     font-weight: bold;
-    font-family: Verdana, Geneva, serif;
     font-style: italic;
     text-shadow: 2px 2px #000000;
     margin-top: 10px;
