--- a/assets/styles/survey.css.less
+++ b/assets/styles/survey.css.less
@@ -103,7 +103,7 @@
     border: 1px #bbbbbb solid;
     height: 350px;
     width: 300px;
-    font-style: : cursive cursive ariel;
+    font-style: cursive cursive ariel;
   }
 
   #reviewleft {
@@ -150,11 +150,13 @@
     margin-top: 5%;
     border: 1px #444444 dashed;
     background-color: rgba(44, 44, 44, 0.4);
+    -webkit-transition-delay: 2s; /* Safari */
+    transition-delay: 2s;
     -webkit-transition: opacity 2s ease-in;
        -moz-transition: opacity 2s ease-in;
         -ms-transition: opacity 2s ease-in;
          -o-transition: opacity 2s ease-in;
-            transition: opacity 2s ease-in
+            transition: opacity 2s ease-in;
   }
 
   .ownermoney {
