--- a/views/GuestSurvey/index.ejs
+++ b/views/GuestSurvey/index.ejs
@@ -111,4 +111,6 @@
   </div>
 </div>
 
+<% block('localScripts', '<script src="/page_js/star-explosion.js"></script>') %>
+<% block('localScripts', '<script src="/page_js/fireworks.js"></script>') %>
 <% block('localScripts', '<script src="/page_js/survey.js"></script>') %>
