--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -30,11 +30,10 @@
     <!--SCRIPTS-->
     <script src="/js/dependencies/sails.io.js"></script>
     <script src="/js/dist/jquery.js"></script>
+    <script src="/js/dist/js/bootstrap.js"></script>
     <script src="/js/home.js"></script>
-    <script src="/js/home.js.BASE.js"></script>
-    <script src="/js/home.js.LOCAL.js"></script>
-    <script src="/js/home.js.REMOTE.js"></script>
     <script src="/js/infinite-rotator.js"></script>
+    <script src="/js/jquery.fireworks.js"></script>
     <script src="/js/js/dataTables.bootstrap.js"></script>
     <script src="/js/js/jquery.dataTables.js"></script>
     <script src="/js/odometer.js"></script>
